--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,73 +1,127 @@
-name: build
-on: [push, pull_request]
-jobs:
-  build:
+
+名称：构建
+
+开启：[推送，拉取请求]
+
+工作：
+
+  建造：
+
     runs-on: ${{ matrix.os }}
+
     strategy:
+
       fail-fast: false
+
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
-        build_type: [RelWithDebInfo, Debug]
-        enable_ui: [off]
+
+        os: [windows-latest]
+
+        build_type: [Release]
+
+        enable_ui: [on]
+
         include:
-          - os: ubuntu-latest
-            build_type: Debug
+
+          - os: windows-latest
+
+            build_type: Release
+
             enable_ui: on
+
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: 'recursive'
-    - name: ccache
-      uses: hendrikmuhs/ccache-action@v1
-      if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
-      with:
-        key: ${{ matrix.os }}-${{ matrix.enable_ui }}-${{ matrix.build_type }}
-    - uses: aseprite/get-ninja@main
+
+    - uses: actions/checkout@v3
+
+      和：
+
+        子模块：'递归'
+
+    -名称： ccache
+
+      用途： hendrikmuhs/ccache-action@v1
+
+      如果： runner.os == 'Linux'
+
+      和：
+
+        键： $ { { matrix.os } } -$ { { matrix.enable_ui } }
+
+    -使用： seanmiddleditch/gha-setup-ninja@master
+
     - uses: ilammy/msvc-dev-cmd@v1
+
       if: runner.os == 'Windows'
-    - name: Workaround for windows-2022 and cmake 3.25.0
-      if: runner.os == 'Windows'
-      shell: bash
-      run: rm -rf C:/Strawberry/
+
     - name: Install Dependencies
+
       shell: bash
+
       run: |
+
         if [[ "${{ runner.os }}" == "Linux" ]] ; then
-          sudo apt-get update -qq
-          sudo apt-get install -y \
+
+          sudo apt-get 更新-qq
+
+          sudo apt-get 安装 -y \
+
             libx11-dev libxcursor-dev libxi-dev
-        fi
-    - name: Generating Makefiles
-      shell: bash
-      run: |
-        if [[ "${{ runner.os }}" == "Windows" ]] ; then
-          export enable_ccache=off
-        else
-          export enable_ccache=on
-        fi
-        cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-          -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 \
-          -DENABLE_TESTS=ON \
-          -DENABLE_UI=${{ matrix.enable_ui }} \
-          -DENABLE_CCACHE=$enable_ccache
-    - name: Compiling
-      shell: bash
-      run: |
-        cd build && ninja
-    - name: Running C++ Tests
-      shell: bash
-      run: |
-        if [[ "${{ runner.os }}" == "Linux" ]] ; then
-          export XVFB=xvfb-run
-        fi
-        cd build && $XVFB ctest --output-on-failure
-    - name: Running CLI Tests
-      shell: bash
-      run: |
-        if [[ "${{ runner.os }}" == "Linux" ]] ; then
-          export XVFB=xvfb-run
-        fi
-        export ASEPRITE=$PWD/build/bin/aseprite
-        cd tests
-        $XVFB bash run-tests.sh
+
+        菲
+
+    -名称：生成Makefile
+
+      外壳： bash
+
+      运行：|
+
+        如果[  [ “$ {   { runner.os }   } ” == “Windows” ]   ] ; 一
+
+          删除 enable_ccache=off
+
+        别的
+
+          导出 enable_ccache=on
+
+        菲
+
+        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/skia.zip --输出 skia.zip
+
+        7z x skia.zip
+
+        使用 cmake -S 来修复这个问题。-B 构建 -G Ninja \
+
+          -DCMAKE_BUILD_TYPE=$ {   {矩阵.build_type }   } \
+
+禁用 UI配置​​ ​​
+
+          -DENABLE_CCACHE=$enable_ccache \
+
+          -DLAF_BACKEND=skia \
+
+          -DSKIA_DIR=./斯基亚\
+
+          -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
+
+          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
+
+    -名称：编译
+
+      外壳： bash
+
+      运行：|
+
+        cd 构建&& 忍者
+
+    -用途：actions/upload-artifact@v3
+
+      和：
+
+        名称: aseprite
+
+        路径：|
+
+          D:/a/aseprite/aseprite/build/bin/data
+
+          D:/a/aseprite/aseprite/build/bin/aseprite.exe
+
